      - [ ] Accumulate request bodies at the inbound
- [ ] yarpcrouter.Router needs to accept middleware to decorate registered
      procedures.
- [ ] Replace functional options in yarpcpeerlist with struct options
- [ ] Integrate the configuration into a variety of Fx modules.
      - [ ] Integrate servicefx.Metadata into each of the relevant Fx packages.
- [ ] Create an API in yarpcfx to register and obtain peer lists by name.
      Use this API to configure the chooser for an outbound in their transport fx package.
      Use this API to send updates from a peer list updater to a peer list in the updater fx package.
- [ ] yarpchttp needs to subsume responsibility for validating requests instead
      of leaving that to middleware registered in the dispatcher.
- [ ] Consider renaming HandlerSpecs to Routes
- [ ] Fix round robin tests, relaxing its requirements regarding lifecycle
      ordering, perhaps taking availability changes into account.
- [ ] Audit yarpcerrors, remove the ones that are no longer needed.
      - [ ] add staticcheck for v2/internal/internalyarpcerror/yarpcerrors.go from `local.mk`
- [ ] Construct PRs with retroactive continuity.
- [ ] Nit: scrape name pid and change to just id throughout.
- [ ] Audit docs
      - [ ] gRPC
      - [ ] TChannel
      - [ ] HTTP
- [ ] InvokeUnaryHandler: reduce package name noise at the call site by changing to a Do(ctx) method on UnaryInvokeRequest
- [ ] support StreamHandlers in EncodingHandlerSpec
- [ ] Restore Request/Response validation, either in the transport layer or
      with middleware installed by Router (ServerProvider *cough*) and ClientProvider.
      - [ ] Inbound
            - [ ] gRPC
            - [ ] TChannel
            - [ ] HTTP
      - [ ] Outbound
            - [ ] gRPC
            - [ ] TChannel
            - [ ] HTTP
- [ ] Consider removing yarpctest.NewRequestMatcher. Requests are trivial to
      match now, except for header case mismatches.